<resources>
    <string name="app_name">Delicias</string>

    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="favorites">favorites</string>
    <string name="map">map</string>
    <string name="setting">setting</string>
    <string name="empty_restaurants">식당 리스트를 불러오지 못했습니다.</string>
    <string name="empty_favorite_restaurants">즐겨찾는 식당이 없습니다.</string>
    <string name="hide_menuless_restaurant">메뉴 없는 식당 안보기</string>
    <string name="developers">만든 사람들</string>
    <string name="server_info">서버</string>
    <string name="mock_server">Mock</string>
    <string name="version_info">버전 정보</string>
    <string name="send_opinion">의견 보내기</string>
    <string name="notice">공지사항</string>
    <string name="str_setting">설정</string>
    <string name="restaurant_map_title">식당 지도</string>
    <string name="today_menu">오늘의 메뉴</string>
    <string name="location">위치</string>
    <string name="operation_time">운영시간</string>
    <string name="copy_address">주소 복사</string>
    <string name="find_road">길 찾기</string>
</resources>
