<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fafafa">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_setting_item">

                    <TextView
                        android:id="@+id/tv_toolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="parent"
                        app:layout_constraintRight_toLeftOf="parent"
                        android:padding="8dp"
                        android:text="@string/str_setting"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="#ed4e31"
                        android:layout_gravity="center"/>
                </com.google.android.material.appbar.AppBarLayout>
            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_setting_item"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/notice"
                android:textSize="16sp"
                android:layout_marginStart="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_send_opinion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_setting_item"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/send_opinion"
                android:textSize="16sp"
                android:layout_marginStart="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_version_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_setting_item"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/version_info"
                android:textSize="16sp"
                android:layout_marginStart="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:text="v 1.0.0"
                android:textSize="16sp"
                android:textColor="#ed4e31"
                android:layout_marginStart="240dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_dont_see_restaurant_without_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_setting_item"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/hide_menuless_restaurant"
                android:textSize="16sp"
                android:layout_marginStart="20dp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_hide_menuless_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="170dp"
                android:layout_marginStart="170dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/ll_see_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_setting_item"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/developers"
                android:textSize="16sp"
                android:layout_marginStart="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_server_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_setting_item"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/server_info"
                android:textSize="16sp"
                android:layout_marginStart="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="280dp"
                android:text="@string/mock_server"
                android:textSize="16sp"
                android:textColor="#ed4e31"
                android:layout_marginStart="280dp" />
        </LinearLayout>
    </LinearLayout>
</layout>