<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.delicias.ui.map.MapViewModel" />
        <variable
            name="restaurant"
            type="com.example.delicias.domain.Restaurant" />
        <import type="android.view.View"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/ll_detail_restaurant_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#e9ecef"
            android:layout_gravity="bottom">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_marginBottom="1dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_detail_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/location_2x"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/iv_detail_location"
                        app:layout_constraintBottom_toBottomOf="@id/iv_detail_location"
                        app:layout_constraintLeft_toRightOf="@id/iv_detail_location"
                        android:layout_marginLeft="10dp"
                        android:text="@string/location"
                        android:textSize="18sp"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/iv_detail_location"
                        app:layout_constraintBottom_toBottomOf="@id/iv_detail_location"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginRight="30dp"
                        android:text="@{restaurant.place}"
                        android:textSize="18sp"
                        android:layout_marginEnd="30dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_clock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/clock"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp" />
                    <TextView
                        android:id="@+id/tv_open_time_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@+id/iv_clock"
                        app:layout_constraintLeft_toRightOf="@+id/iv_clock"
                        android:layout_marginLeft="10dp"
                        android:text="@string/operation_time"
                        android:textSize="18sp"
                        android:layout_marginStart="10dp" />
                    <TextView
                        android:id="@+id/tv_open_time_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/iv_clock"
                        app:layout_constraintLeft_toLeftOf="@id/iv_clock"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp"
                        android:text="@{restaurant.lunchTime}"
                        android:layout_marginStart="5dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/menu"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:id="@+id/tv_cafeteria_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/today_menu"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        app:layout_constraintTop_toTopOf="@+id/iv_menu"
                        app:layout_constraintLeft_toRightOf="@+id/iv_menu"
                        android:layout_marginLeft="10dp" />

                    <LinearLayout
                        android:id="@+id/ll_division"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="40dp"
                        android:background="#e9ecef"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_menu_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/ll_division"
                        tools:layout_editor_absoluteX="0dp"
                        tools:listitem="@layout/item_menu" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

            <include android:id="@+id/map_title" layout="@layout/layout_map_title"/>

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.naver.maps.map.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:navermap_latitude="37.450050"
                app:navermap_longitude="126.952497"
                app:navermap_zoom="16"/>

            <ImageButton
                android:id="@+id/btn_default_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="40dp"
                android:src="@drawable/gps"
                android:background="@drawable/shape_white_circle"/>
        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_restaurant_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            android:background="@drawable/shape_edge"
            android:layout_gravity="center|bottom"
            visible="@{viewModel.isRestaurantInfoCardViewVisible}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_restaurant_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_card_restaurant_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:textSize="20sp"
                    android:text="@{restaurant.name}"
                    android:layout_marginStart="20dp" />

                <ToggleButton
                    android:id="@+id/btn_favorite"
                    android:onClick="@{() -> viewModel.onFavoriteButtonClick(restaurant)}"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintRight_toRightOf="parent"
                    android:background="@drawable/selector_favorite" />

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:src="@drawable/location"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_card_restaurant_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_card_restaurant_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{restaurant.place}"
                    android:textSize="13sp"
                    app:layout_constraintLeft_toRightOf="@+id/iv_location"
                    app:layout_constraintTop_toTopOf="@+id/iv_location"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_location"
                    android:layout_marginLeft="6dp"
                    android:layout_marginStart="6dp" />

                <ImageView
                    android:id="@+id/iv_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:src="@drawable/call"
                    app:layout_constraintLeft_toLeftOf="@+id/iv_location"
                    app:layout_constraintTop_toBottomOf="@+id/iv_location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{restaurant.contact}"
                    android:textSize="13sp"
                    app:layout_constraintLeft_toRightOf="@+id/iv_call"
                    app:layout_constraintTop_toTopOf="@+id/iv_call"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_call"
                    android:layout_marginLeft="6dp"
                    android:layout_marginStart="6dp" />


                <LinearLayout
                    android:id="@+id/ln_division"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="100dp"
                    android:background="#e9ecef"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/ln_division"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ln_copy_address"
                        android:onClick="@{() -> viewModel.onCopyAddressButtonClick(restaurant)}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_weight="50">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/file_copy"
                            android:layout_marginRight="8dp"
                            android:layout_marginEnd="8dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/copy_address"
                            android:textSize="15sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ln_division_horizontally"
                        android:layout_width="1dp"
                        android:layout_height="23dp"
                        android:background="#e9ecef"
                        android:orientation="vertical"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <LinearLayout
                        android:id="@+id/ln_find_road"
                        android:onClick="@{() -> viewModel.setNMapAppDeeplinkCardViewVisible(restaurant)}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_weight="50">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/navigation"
                            android:layout_marginRight="8dp"
                            android:layout_marginEnd="8dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/find_road"
                            android:textSize="15sp"/>
                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>